# web-app/packages/lib/src/modules/user/routes.ts
@@ -16,6 +16,7 @@ export enum UserRouteName {
   Login = 'login',
   ConfirmEmail = 'confirm_email',
   ChangePassword = 'change_password',
+  UnlockAccount = 'unlock_account',
   UserProfile = 'user_profile'
 }
 
@@ -29,6 +30,7 @@ export const getUserTitle = (route: RouteLocationNormalizedLoaded) => {
     ],
     [UserRouteName.ConfirmEmail]: ['Confirm email address', DEFAULT_PAGE_TITLE],
     [UserRouteName.ChangePassword]: ['Change password', DEFAULT_PAGE_TITLE],
+    [UserRouteName.UnlockAccount]: ['Account unlock', DEFAULT_PAGE_TITLE],
     [UserRouteName.UserProfile]: ['Your profile']
   }
   return titles[name]
